overflow fixed

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -98,6 +98,7 @@ body {
 	font-family: 'Chakra Petch', Roboto, sans-serif;
 	color: white;
 	background: #050024;
+	overflow: hidden;
 }
 a {
 	color: inherit;
